--- a/index.html
+++ b/index.html
@@ -1,174 +1,120 @@
 <!DOCTYPE html>
-<html lang="en" id="htmlTag">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Nicolás Aguirre | Data & AI Architect</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/styles.css">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Nicolás Aguirre | Enterprise Data Architect</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-<header>
-<h1>Nicolás Aguirre</h1>
-<p data-i18n="subtitle"></p>
+<header class="hero">
+  <div class="hero-content">
+    <h1>Nicolás Aguirre</h1>
 
-<div class="language-switch">
-<button onclick="setLanguage('en')">EN</button>
-<button onclick="setLanguage('es')">ES</button>
-</div>
+    <h2 data-i18n="hero_title"></h2>
+
+    <p class="hero-sub" data-i18n="hero_sub"></p>
+
+    <div class="hero-metrics">
+      <span data-i18n="metric_1"></span>
+      <span data-i18n="metric_2"></span>
+      <span data-i18n="metric_3"></span>
+      <span data-i18n="metric_4"></span>
+    </div>
+
+    <a href="#case-studies" class="btn" data-i18n="hero_btn"></a>
+
+    <div class="language-switch">
+      <button onclick="setLanguage('en')">EN</button>
+      <button onclick="setLanguage('es')">ES</button>
+    </div>
+  </div>
 </header>
 
-<!-- ABOUT -->
-<section>
-<h2 data-i18n="about_title"></h2>
+<section id="impact">
+  <h2 data-i18n="impact_title"></h2>
 
-<div class="card">
-<p data-i18n="about_p1"></p>
-<p data-i18n="about_p2"></p>
-</div>
+  <div class="card">
+    <h3 data-i18n="impact_1_title"></h3>
+    <p data-i18n="impact_1_desc"></p>
+  </div>
+
+  <div class="card">
+    <h3 data-i18n="impact_2_title"></h3>
+    <p data-i18n="impact_2_desc"></p>
+  </div>
+
+  <div class="card">
+    <h3 data-i18n="impact_3_title"></h3>
+    <p data-i18n="impact_3_desc"></p>
+  </div>
 </section>
 
-<!-- COMPUTER VISION -->
-<section>
-<h2 data-i18n="cv_title"></h2>
+<section id="case-studies">
+  <h2 data-i18n="cases_title"></h2>
 
-<div class="card">
-<h3 data-i18n="cv_project_title"></h3>
-<p data-i18n="cv_p1"></p>
-<p data-i18n="cv_p2"></p>
+  <!-- AWS CASE -->
+  <div class="card">
+    <h3 data-i18n="aws_title"></h3>
+    <p data-i18n="aws_desc"></p>
 
-<h4 data-i18n="cv_preview"></h4>
+    <h4 data-i18n="architecture_label"></h4>
 
-<iframe width="100%" height="400"
-src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-title="Real-Time Vision Platform"
-frameborder="0"
-allowfullscreen>
-</iframe>
-</div>
+    <img src="images/aws_architecture.svg" class="card-img">
+
+    <h4 data-i18n="design_label"></h4>
+    <ul>
+      <li data-i18n="aws_l1"></li>
+      <li data-i18n="aws_l2"></li>
+      <li data-i18n="aws_l3"></li>
+      <li data-i18n="aws_l4"></li>
+    </ul>
+
+    <h4 data-i18n="results_label"></h4>
+    <p data-i18n="aws_results"></p>
+
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/TU_VIDEO_AWS"
+              allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <!-- OEE CASE -->
+  <div class="card">
+    <h3 data-i18n="oee_title"></h3>
+    <p data-i18n="oee_desc"></p>
+
+    <h4 data-i18n="architecture_label"></h4>
+
+    <img src="images/oee_architecture.svg" class="card-img">
+
+    <h4 data-i18n="capabilities_label"></h4>
+    <ul>
+      <li data-i18n="oee_l1"></li>
+      <li data-i18n="oee_l2"></li>
+      <li data-i18n="oee_l3"></li>
+      <li data-i18n="oee_l4"></li>
+    </ul>
+
+    <h4 data-i18n="impact_label"></h4>
+    <p data-i18n="oee_results"></p>
+
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/TU_VIDEO_OEE"
+              allowfullscreen></iframe>
+    </div>
+  </div>
 </section>
 
-<!-- INDUSTRIAL ANALYTICS -->
-<section>
-<h2 data-i18n="ia_title"></h2>
-
-<!-- OEE -->
-<div class="card">
-<h3 data-i18n="oee_title"></h3>
-<p data-i18n="oee_p"></p>
-
-<ul>
-<li><strong data-i18n="oee_l1"></strong></li>
-<li><strong data-i18n="oee_l2"></strong></li>
-<li><strong data-i18n="oee_l3"></strong></li>
-<li><strong data-i18n="oee_l4"></strong></li>
-</ul>
-
-<iframe width="100%" height="400"
-src="https://www.youtube.com/embed/D6nZf-7knyQ?rel=0"
-title="OEE Dashboard"
-frameborder="0"
-allowfullscreen>
-</iframe>
-
-<a class="btn"
-href="files/Plant Monitor OEE Mobile.json"
-target="_blank"
-data-i18n="oee_btn">
-</a>
-</div>
-
-<!-- PRODUCTION MONITORING -->
-<div class="card">
-<h3 data-i18n="pm_title"></h3>
-<p data-i18n="pm_p"></p>
-
-<iframe width="100%" height="400"
-src="https://www.youtube.com/embed/yPQCoDDLgqc?rel=0"
-title="Production Monitoring Dashboard"
-frameborder="0"
-allowfullscreen>
-</iframe>
-
-<a class="btn"
-href="files/Manufacturing Operations & Order Tracking Dashboard.json"
-target="_blank"
-data-i18n="pm_btn">
-</a>
-</div>
-
-<!-- POWER BI -->
-<div class="card">
-<h3 data-i18n="pbi_title"></h3>
-<p data-i18n="pbi_p"></p>
-
-<ul>
-<li><strong data-i18n="pbi_l1"></strong></li>
-<li><strong data-i18n="pbi_l2"></strong></li>
-<li><strong data-i18n="pbi_l3"></strong></li>
-<li><strong data-i18n="pbi_l4"></strong></li>
-</ul>
-
-<img src="assets/img/Production Line Control in Plant.png"
-alt="Production Line Control in Plant">
-
-<a class="btn"
-href="files/Production Line Control in Plant.pbix"
-download
-data-i18n="pbi_btn">
-</a>
-</div>
-
-<!-- INDUSTRIAL ARCHITECTURE -->
-<div class="card">
-<h3 data-i18n="arch_title"></h3>
-<p data-i18n="arch_p1"></p>
-<p data-i18n="arch_p2"></p>
-
-<img src="assets/img/Industrial Data Architecture.svg"
-alt="Industrial Data Architecture Diagram">
-</div>
-
+<section id="contact">
+  <div class="card center">
+    <h3 data-i18n="contact_title"></h3>
+    <p data-i18n="contact_desc"></p>
+    <a href="mailto:tuemail@email.com" class="btn"
+       data-i18n="contact_btn"></a>
+  </div>
 </section>
-
-<!-- CERTIFICATIONS -->
-<section>
-<h2 data-i18n="cert_title"></h2>
-
-<div class="card">
-<ul>
-<li><strong>SAP Certified Associate - Data Engineer - SAP BW/4HANA</strong> – 
-<a href="https://www.credly.com/badges/39c9e074-c5bf-4489-b5a7-47383a1645b9" target="_blank">View Certificate</a></li>
-
-<li><strong>Machine Learning</strong> – 
-<a href="https://www.coursera.org/account/accomplishments/certificate/EE2V2KS6SZSD" target="_blank">View Certificate</a></li>
-
-<li><strong>AWS Machine Learning Foundations</strong> – 
-<a href="https://www.udacity.com/certificate/HD6N3HNH" target="_blank">View Certificate</a></li>
-
-<li><strong>Intro to Machine Learning</strong> – 
-<a href="https://www.kaggle.com/learn/certification/aguirrenic/intro-to-machine-learning" target="_blank">View Certificate</a></li>
-
-<li><strong>Introducción a Python</strong> – 
-<a href="files/cert/cert-python.pdf" target="_blank">View Certificate</a></li>
-
-<li><strong>Python</strong> – 
-<a href="https://www.kaggle.com/learn/certification/aguirrenic/python" target="_blank">View Certificate</a></li>
-
-<li><strong>Frontend JavaScript Certification</strong> – 
-<a href="files/cert/cert-FrontEnd JS.pdf" target="_blank">View Certificate</a></li>
-
-<li><strong>Project Mentoring Program – Universidad de Palermo</strong> – 
-<a href="https://your-link-here.com" target="_blank">View Certificate</a></li>
-</ul>
-</div>
-</section>
-
-<footer>
-© 2026 Nicolás Aguirre
-</footer>
 
 <script src="js/translations.js" defer></script>
 <script src="js/main.js" defer></script>
