--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="summary-links">
-      <a href="https://www.linkedin.com/in/aguirrenic/" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/aguirrenicolas/" target="_blank" aria-label="LinkedIn">
         <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
       </a>
       <a href="https://github.com/aguirrenic" target="_blank" aria-label="GitHub">
