--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
 
+<header class="navbar">
+  <div class="nav-container">
+    <div class="logo">TuNombre</div>
+    <nav>
+      <a href="#summary">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+
+
 <!-- ================= Hero ================= -->
 <header class="hero">
   <div class="hero-content">
