--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo">TuNombre</div>
+    <div class="logo">Nicolás Aguirre</div>
     <nav>
       <a href="#summary">About</a>
-      <a href="#projects">Projects</a>
+      <a href="#case-studies">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </div>
