--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="logo">Nicolás Aguirre</div>
     <nav>
       <a href="#summary">About</a>
-      <a href="#case-studies">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#case-studies">Case Studies</a>
       <a href="#contact">Contact</a>
     </nav>
   </div>
