--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="nav-container">
     <div class="logo">Nicolás Aguirre</div>
     <nav>
-      <a href="#summary">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#case-studies">Case Studies</a>
-      <a href="#contact">Contact</a>
+      <a href="#summary" data-i18n="nav_about"></a>
+      <a href="#skills" data-i18n="nav_skills">Skills</a>
+      <a href="#case-studies"  data-i18n="nav_cases">Case Studies</a>
+      <a href="#contact" data-i18n="nav_contact">Contact</a>
     </nav>
   </div>
 </header>
