--- a/index.html
+++ b/index.html
@@ -193,17 +193,17 @@
     <h3 data-i18n="pbi_title"></h3>
     <p data-i18n="pbi_p"></p>
 
+    <img src="assets/img/Production Line Control in Plant.png"
+    alt="Production Line Control in Plant">
+
+    <h4 data-i18n="results_label"></h4>
     <ul>
         <li><strong data-i18n="pbi_l1"></strong></li>
         <li><strong data-i18n="pbi_l2"></strong></li>
         <li><strong data-i18n="pbi_l3"></strong></li>
         <li><strong data-i18n="pbi_l4"></strong></li>
     </ul>
-
-    <img src="assets/img/Production Line Control in Plant.png"
-    alt="Production Line Control in Plant">
-
-    </div>
+    </div>   
   </div>
 </section>
 
